fix width checkbox & radiobtn on mobile

--- a/src/components/common/CheckboxInput/CheckboxInput.module.scss
+++ b/src/components/common/CheckboxInput/CheckboxInput.module.scss
@@ -53,9 +53,3 @@
     opacity: 1;
   }
 }
-
-@media (max-width: $mobile) {
-  .checkbox {
-    width: 120px;
-  }
-}
