--- a/src/components/common/RadioInput/RadioInput.module.scss
+++ b/src/components/common/RadioInput/RadioInput.module.scss
@@ -43,9 +43,3 @@
     border: 3px solid $main-accent;
   }
 }
-
-@media (max-width: $mobile) {
-  .radioInput {
-    width: 120px;
-  }
-}
